implemented viewBag to store AssignmentID and QueryID

--- a/Views/Query/StaffQuery/QueryDetails.cshtml
+++ b/Views/Query/StaffQuery/QueryDetails.cshtml
@@ -3,6 +3,13 @@
 
 
 
+@{
+    ViewData["Title"] = "Submit Academic Query";
+    int queryId = ViewBag.QueryID;
+    var assignmentID = ViewBag.AssignmentID;
+}
+
+
 
 <link rel="stylesheet" href="~/css/AssignedQueryDetails.css" asp-append-version="true">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
