--- a/Views/Query/StaffQuery/StaffQueries.cshtml
+++ b/Views/Query/StaffQuery/StaffQueries.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" href="~/css/staffQueries.css" asp-append-version="true">
@@ -6,6 +8,9 @@
 </head>
 <body>
     @model IEnumerable<Apptivate_UQMS_WebApp.Models.QueryModel.QueryAssignment>
+
+   
+
 
     <!-- Dashboard Header -->
     <div class="dashboard-header">
