--- a/Views/Query/StudentQuery/QueryOverview/ViewTicket.cshtml
+++ b/Views/Query/StudentQuery/QueryOverview/ViewTicket.cshtml
@@ -88,7 +88,7 @@
         </div>
 
         <div class="ticket-footer">
-            <a href="@Url.Action("Index", "Query")" class="back-btn">
+            <a href="@Url.Action("AllTickets", "Query")" class="back-btn">
                 <i class="fas fa-arrow-left"></i>
                 <span>Back to Tickets</span>
             </a>
