--- a/Views/Dashboard/StaffDashboard.cshtml
+++ b/Views/Dashboard/StaffDashboard.cshtml
@@ -88,7 +88,7 @@
                         @foreach (var assignment in Model.AssignedQueries)
                         {
                             var query = assignment.Query;
-                            <tr class="query-row" onclick="window.location.href='@Url.Action("ViewTicket", "Query", new { queryId = query.QueryID })'">
+                            <tr class="query-row" onclick="window.location.href='@Url.Action("QueryDetails", "Query", new { queryId = query.QueryID })'">
                                 <td>@query.Student?.User?.Email</td>
                                 <td>@query.Category?.QueryType?.TypeName</td>
                                 <td>@query.Department?.DepartmentName</td>
