--- a/Views/Query/StaffQuery/QueryDetails.cshtml
+++ b/Views/Query/StaffQuery/QueryDetails.cshtml
@@ -19,7 +19,7 @@
 <div class="query-details-container">
     <div class="header-section">
         <h1><i class="fas fa-file-alt"></i> Query Details</h1>
-        <div class="status-badge @Model.Status.ToLower()">@Model.Status</div>
+        <div class="status-badge @Model.Status">@Model.Status</div>
     </div>
 
     <div class="details-grid">
