--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                 @if (User.IsInRole("Student"))
                 {
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Query" asp-action="Queries">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Query" asp-action="TicketDashboard">
                             <img src="~/svgs/ticket.svg" alt="Queries Icon" class="icon" /><span>Queries</span>
                         </a>
                     </li>
