--- a/Views/Dashboard/StaffDashboard.cshtml
+++ b/Views/Dashboard/StaffDashboard.cshtml
@@ -93,7 +93,7 @@
                                 <td>@query.Category?.QueryType?.TypeName</td>
                                 <td>@query.Department?.DepartmentName</td>
                                 <td>
-                                    <span class="status-badge @(query.Status == "Pending" ? "status-pending" : (query.Status == "Resolved" ? "status-resolved" : "status-other"))">
+                                    <span class="status-badge @(query.Status == QueryModel.QueryStatus.Ongoing))">
                                         @query.Status
                                     </span>
                                 </td>
