--- a/Views/Query/StudentQuery/QueryOverview/AllTickets.cshtml
+++ b/Views/Query/StudentQuery/QueryOverview/AllTickets.cshtml
@@ -13,7 +13,8 @@
                         <strong>Ticket# @query.QueryID</strong>
                     </div>
                     <div class="ticket-status">
-                        <span class="status-badge @query.Status.ToLower()">@query.Status</span>
+                        <span class="status-badge @query.Status.ToString().ToLower()">@query.Status</span>
+
                     </div>
                 </div>
                 <div class="ticket-body">
